--- a/src/window.ui
+++ b/src/window.ui
@@ -15,7 +15,7 @@
   <object class="GtkImage" id="image3">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="icon_name">folder-symbolic</property>
+    <property name="icon_name">gamepad-symbolic</property>
   </object>
   <template class="TaigoWindow" parent="GtkApplicationWindow">
     <property name="can_focus">False</property>
@@ -66,7 +66,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton">
+              <object class="GtkButton" id="play">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
@@ -118,4 +118,23 @@
       </object>
     </child>
   </template>
+  <object class="GtkPopover" id="complain">
+    <property name="can_focus">False</property>
+    <property name="relative_to">taigochi_img</property>
+    <property name="modal">False</property>
+    <child>
+      <object class="GtkLabel" id="complain_label">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="margin_left">10</property>
+        <property name="margin_right">10</property>
+        <property name="margin_top">10</property>
+        <property name="margin_bottom">10</property>
+        <property name="label" translatable="yes">label</property>
+        <style>
+          <class name="title-2"/>
+        </style>
+      </object>
+    </child>
+  </object>
 </interface>
