--- a/src/status.ui
+++ b/src/status.ui
@@ -178,8 +178,8 @@
         </child>
         <child>
           <object class="GtkBox">
-            <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="no_show_all">True</property>
             <property name="halign">center</property>
             <property name="hexpand">True</property>
             <property name="spacing">10</property>
