--- a/src/window.ui
+++ b/src/window.ui
@@ -97,6 +97,8 @@
             <child>
               <placeholder/>
             </child>
+            <accelerator key="d" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+            <accelerator key="i" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
           </object>
           <packing>
             <property name="pack_type">end</property>
