--- a/src/window.ui
+++ b/src/window.ui
@@ -180,6 +180,18 @@
             <property name="title" translatable="yes">page0</property>
           </packing>
         </child>
+        <child>
+          <object class="GtkImage" id="away">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="resource">/com/github/appadeia/Taigo/images/bgs/away.svg</property>
+          </object>
+          <packing>
+            <property name="name">away</property>
+            <property name="title" translatable="yes">page0</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
       </object>
     </child>
   </template>
