--- a/src/window.ui
+++ b/src/window.ui
@@ -125,7 +125,6 @@
       <object class="GtkStack" id="content_stack">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="transition_type">over-down-up</property>
         <child>
           <object class="GtkOverlay" id="daycare">
             <property name="visible">True</property>
@@ -194,6 +193,9 @@
         </child>
       </object>
     </child>
+    <style>
+      <class name="main"/>
+    </style>
   </template>
   <object class="GtkPopover" id="complain">
     <property name="can_focus">False</property>
